--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -4,8 +4,10 @@
             <img src="/assets/img/svg/angular_chatgpt_logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
             Learn Angular w\ChatGPT
         </a>
-      <form class="d-flex">
-        <button type="button" class="btn btn-outline-danger">Logout</button>
+      <form class="d-flex" *ngIf="authenticated">
+        <button type="button" class="btn btn-outline-danger" (click)="logout()">Logout</button>
       </form>
     </div>
 </nav>
+
+<h1>{{welcome}}</h1>
