--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+
+<div class="container my-5">
+  <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+      <h1 class="question">{{question}}</h1>
+      <p>
+        <mat-radio-group
+        aria-labelledby="example-radio-group-label"
+        class="example-radio-group" [(ngModel)]="selectedAnswer">
+        <mat-radio-button 
+          class="example-radio-button" *ngFor="let answer of typeOfAnswer" [value]="answer">
+          {{answer}}
+         </mat-radio-button>
+      </mat-radio-group>
+      </p>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+        <button type="submit" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" (click)="comprobar()" >Comprobar</button>
+        
+        <button type="submit" class="btn btn-outline-secondary btn-lg px-4" (click)="nextQuestion()">Next</button>
+        <div> {{this.response}}</div>
+      </div>
+    </div>
+    <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+        <img class="image" src="https://tinyurl.com/5n8prkwn" alt="" >
+    </div>
+  </div>
+</div>
