--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -25,6 +25,7 @@
         <h1 class="display-4 fw-bold lh-1 text-body-emphasis">{{question}}</h1>
         <p class="lead">Select the correct option:</p>
         <p class="lead">
+          <!-- True/False or Multiple Choice questions: -->
           <div *ngIf="show; else notShow">
             <mat-radio-group
                 aria-labelledby="example-radio-group-label"
@@ -35,6 +36,7 @@
                   </mat-radio-button>
               </mat-radio-group>
           </div>
+          <!-- Input question type: -->
           <ng-template #notShow>
             <div class="input-group px-4 py-4">
               <span class="input-group-text">Your Answer</span>
@@ -47,17 +49,17 @@
                 <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
               </svg>
               Test</button>
-            <button type="submit" class="btn btn-outline-secondary btn-lg px-4 me-md-2 " (click)="nextQuestion()">Next ></button>
+            <button type="submit" class="btn btn-outline-secondary btn-lg px-4 me-md-2 " (click)="next()">Next ></button>
           </div>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-            <button type="submit" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Generate New 
+            <button type="submit" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold" (click)="reload()">Generate New 
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-chat-dots" viewBox="0 1 16 16">
                 <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                 <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
               </svg>
             </button>
           </div>
-          <div class="alert alert-danger" role="alert">
+          <div class="alert {{resultType}}" role="alert" *ngIf="message">
            {{result}}
           </div>
       </div>
@@ -66,13 +68,13 @@
       </div>
     </div>
   </div>
-
+<!--
   <div class="dropdown">
     <select class="btn btn-secondary dropdown-toggle" [(ngModel)]="pachuli">
       <option value="null" [disabled]="true">Select option:</option>
       <option class="dropdown-item" *ngFor="let title of pachulo" value="{{title.value}}">{{title.text}}</option>
     </select>
-  </div>
+  </div> -->
   <p>{{pachuli}}</p>
 
   <div class="bg-dark text-secondary px-4 py-5 text-center">
